tests/compile_fail/borrow/const_projection.rs
trait Trait {
    type Assoc;
}

#[derive(derive_more::Borrow)]
struct Foo<const N: usize>(<[i32; N] as Trait>::Assoc)
where
    [i32; N]: Trait;

fn main() {}
