tests/compile_fail/borrow/const_projection.stderr
error: `Borrow` cannot be derived for an associated type projection involving generic parameters because the impl can overlap with `core`'s blanket `Borrow` implementation
 --> tests/compile_fail/borrow/const_projection.rs:6:28
  |
6 | struct Foo<const N: usize>(<[i32; N] as Trait>::Assoc)
  |                            ^
